force-app/main/default/objects/resource__c/fields/AccountingCode__c.field-meta.xml
<CustomField>
    <fullName>AccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipName>RESOURCE</relationshipName>
    <type>Lookup</type>
</CustomField>