force-app/main/default/objects/resource__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The active check box must be unchecked when submitted for approval.
After approval, the checkbox will be checked automatically.</inlineHelpText>
    <label>ACTIVE</label>
    <type>Checkbox</type>
</CustomField>