force-app/main/default/objects/resource__c/fields/RepairMaintenanceCategory__c.field-meta.xml
<CustomField>
    <fullName>RepairMaintenanceCategory__c</fullName>
    <label>REPAIR &amp; MAINTENANCE CATEGORY:</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SubCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>RepairMaintenanceCategory</valueSetName>
    </valueSet>
</CustomField>