force-app/main/default/objects/resource__c/fields/ResourceCode__c.field-meta.xml
<CustomField>
    <fullName>ResourceCode__c</fullName>
    <label>RESOURCE CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>