force-app/main/default/objects/resource__c/fields/ResourceName__c.field-meta.xml
<CustomField>
    <fullName>ResourceName__c</fullName>
    <label>RESOURCE NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>