force-app/main/default/objects/resource__c/fields/ResourceNameAtPrint__c.field-meta.xml
<CustomField>
    <fullName>ResourceNameAtPrint__c</fullName>
    <label>RESOURCE NAME AT PRINT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>