force-app/main/default/objects/resource__c/fields/ServiceProviderVendor__c.field-meta.xml
<CustomField>
    <fullName>ServiceProviderVendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SERVICE PROVIDER VENDOR</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>RESOURCE</relationshipName>
    <type>Lookup</type>
</CustomField>