force-app/main/default/objects/resource__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>START DATE</label>
    <type>Date</type>
</CustomField>