force-app/main/default/objects/resource__c/fields/UnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceLocal__c</fullName>
    <label>UNIT PRICE (LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>